--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -57,3 +57,22 @@ textarea {
     border: 1px solid #000000;
     border-radius: 5px;
 }
+
+#sortable {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+    #sortable li {
+        margin: 3px 3px 3px 0;
+        padding: 1px;
+        float: left;
+        width: 20%;
+        height: 10%;
+        font-size: 16px;
+        text-align: center;
+        border-style: solid;
+        border-width: 2px;
+    }
