--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -4,18 +4,13 @@
     <div class="row">
         <div class='col-sm-6'>
             <div class="form-group">
-                <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
+                <div class='input-group date'>
+                    <input type='text' class="form-control" id="datepicker" />
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            $(function () {
-                $('#datetimepicker1').datetimepicker();
-            });
-        </script>
     </div>
 </div>
