--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,16 +1,22 @@
-﻿@model Nullable<System.DateTime>
+﻿@model DateTime?
 
 <div class="container">
     <div class="row">
         <div class='col-sm-6'>
             <div class="form-group">
-                <div class='input-group date'>
-                    <input type='text' class="form-control" id="datepicker" />
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
             </div>
         </div>
+        <script type="text/javascript">
+
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
     </div>
 </div>
