--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Create";
 }
 @section scripts{
-    @Scripts.Render("~/Scripts/Personalized/YouTubeScripts.js")
+    @Scripts.Render("~/Scripts/jquery-2.1.3.js")
+    @Scripts.Render("~/Scripts/Moment.js")
+    @Scripts.Render("~/Scripts/bootstrap.js")
+    @Scripts.Render("~/Scripts/bootstrap-datetimepicker.min.js")
+        
 }
 
 <h2>Create</h2>
@@ -41,7 +45,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" >
             @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BroadcastScheduledStartTime)
@@ -49,9 +53,9 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" >
             @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-10" id="datetimepicker2">
                 @Html.EditorFor(model => model.BroadcastScheduledEndTime)
                 @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
             </div>
@@ -101,6 +105,7 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+
     </div>
 }
 
