--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -4,11 +4,19 @@
     ViewBag.Title = "Create";
 }
 @section scripts{
-    @Scripts.Render("~/Scripts/jquery-2.1.3.js")
     @Scripts.Render("~/Scripts/Moment.js")
     @Scripts.Render("~/Scripts/bootstrap.js")
     @Scripts.Render("~/Scripts/bootstrap-datetimepicker.min.js")
-        
+
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker1').datetimepicker();
+        $('#datetimepicker2').datetimepicker();
+    });
+</script>
+
+
+         
 }
 
 <h2>Create</h2>
@@ -48,23 +56,38 @@
         <div class="form-group" >
             @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BroadcastScheduledStartTime)
+                <div class='col-md-3'>
+                    <div class='input-group date' id='datetimepicker1'>
+                        <input type='text' class="form-control" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
+                </div>
+
                 @Html.ValidationMessageFor(model => model.BroadcastScheduledStartTime)
             </div>
-        </div>
+                </div>
 
-        <div class="form-group" >
-            @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10" id="datetimepicker2">
-                @Html.EditorFor(model => model.BroadcastScheduledEndTime)
-                @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
-            </div>
-        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <div class='col-md-3'>
+                            <div class='input-group date' id='datetimepicker2'>
+                                <input type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                            </div>
+                        </div>
+                            @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
+                        </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.BroadcastStatus, new SelectList(
+                <div class="form-group">
+                    @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(model => model.BroadcastStatus, new SelectList(
                   new List<Object>{
                        new { value = "private" , text = "Private Stream"  },
                        new { value = "public" , text = "Public Stream"  },
@@ -73,20 +96,20 @@
                   "value",
                   "text",
                    2))
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.StreamSnippetTitle, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StreamSnippetTitle)
-                @Html.ValidationMessageFor(model => model.StreamSnippetTitle)
-            </div>
-        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.StreamSnippetTitle, new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.StreamSnippetTitle)
+                        @Html.ValidationMessageFor(model => model.StreamSnippetTitle)
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.StreamCDNFormat, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.StreamCDNFormat, new SelectList(
+                <div class="form-group">
+                    @Html.LabelFor(model => model.StreamCDNFormat, new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(model => model.StreamCDNFormat, new SelectList(
                   new List<Object>{
                        new { value = "1080p" , text = "1080p"  },
                        new { value = "720p" , text = "720p"  },
@@ -97,16 +120,18 @@
                   "value",
                   "text",
                    2))
-            </div>
-        </div>
+                    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
 
-    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
+                </div>
+
+            </div>
 }
 
 <div>
