fixed datetime issue

--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 @section scripts{
-    @Scripts.Render("~/Scripts/jquery-2.1.3.js")
+    @Scripts.Render("~/Scripts/Personalized/YouTubeScripts.js")
     @Scripts.Render("~/Scripts/Moment.js")
     @Scripts.Render("~/Scripts/bootstrap.js")
     @Scripts.Render("~/Scripts/bootstrap-datetimepicker.min.js")
@@ -48,15 +48,15 @@
         <div class="form-group" >
             @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BroadcastScheduledStartTime)
+                @Html.EditorFor(model => model.BroadcastScheduledStartTime, "DateTime", new { htmlAttributes = new { @id = "stardDate", @class = "datepicker" } })
                 @Html.ValidationMessageFor(model => model.BroadcastScheduledStartTime)
             </div>
         </div>
 
         <div class="form-group" >
-            @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10" id="datetimepicker2">
-                @Html.EditorFor(model => model.BroadcastScheduledEndTime)
+            @Html.LabelFor(model => model.BroadcastScheduledEndTime)
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BroadcastScheduledEndTime, "DateTime", new { htmlAttributes = new { @id = "endDate", @class = "datepicker" } })
                 @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
             </div>
         </div>
