--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,22 +1,9 @@
-﻿@model DateTime?
+﻿@*@model DateTime?*@
 
-<div class="container">
-    <div class="row">
-        <div class='col-sm-6'>
-            <div class="form-group">
-                <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript">
+@inherits System.Web.Mvc.WebViewPage<System.DateTime?>
 
-            $(function () {
-                $('#datetimepicker1').datetimepicker();
-            });
-        </script>
-    </div>
-</div>
+@{
+    var htmlAttributes = ViewData["htmlAttributes"] ?? new { };
+}
+
+@Html.TextBox("", string.Format("{0:yyyy-MM-dd HH:mm}", Model.HasValue ? Model : null), htmlAttributes)
