--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -10,7 +10,9 @@
     @Scripts.Render("~/Scripts/bootstrap-datetimepicker.min.js")
         
 }
-
+<head title="Youtube">
+    <link rel="stylesheet" href="/Content/bootstrap-datetimepicker.css" />
+</head>
 <h2>Create</h2>
 
 @using (Html.BeginForm())
@@ -39,7 +41,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.BroadcastDescription, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-8">
                 @Html.EditorFor(model => model.BroadcastDescription)
                 @Html.ValidationMessageFor(model => model.BroadcastDescription)
             </div>
@@ -47,19 +49,30 @@
 
         <div class="form-group" >
             @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BroadcastScheduledStartTime, "DateTime", new { htmlAttributes = new { @id = "stardDate", @class = "datepicker" } })
+            <div class='col-sm-6'>
+                <div class="input-group date datepicker">
+                    @Html.EditorFor(model => model.BroadcastScheduledStartTime, "DateTime", new { htmlAttributes = new { @id = "starDate", @class = "form-control" } })
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+
                 @Html.ValidationMessageFor(model => model.BroadcastScheduledStartTime)
             </div>
-        </div>
+            </div>
 
         <div class="form-group" >
-            @Html.LabelFor(model => model.BroadcastScheduledEndTime)
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BroadcastScheduledEndTime, "DateTime", new { htmlAttributes = new { @id = "endDate", @class = "datepicker" } })
-                @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
+            @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
+            <div class='col-sm-6'>
+                <div class="input-group date datepicker">
+                    @Html.EditorFor(model => model.BroadcastScheduledEndTime, "DateTime", new { htmlAttributes = new { @id = "endDate", @class = "form-control" } })
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                 </div>
+                    @Html.ValidationMessageFor(model => model.BroadcastScheduledEndTime)
+                </div>
             </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-2" })
