Revert "major changes to namespace, started infrastructure for syllabus"
This reverts commit df68dea4b987fbd4faaab79fdc0f00afda88a037.

--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Web.App_Start.Course
+﻿@model SmartRoom.Web.Course
 
 @{
 	ViewBag.Title = "Details";
@@ -88,17 +88,17 @@
 		<dd>
 			@Html.DisplayFor(model => model.CreateDate)
 		</dd>
-		<dt>
-			@Html.DisplayNameFor(model => model.RegistrationCode)
-		</dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.RegistrationCode)
+        </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.RegistrationCode)
-		</dd>
+        <dd>
+            @Html.DisplayFor(model => model.RegistrationCode)
+        </dd>
 
 	</dl>
-	<hr />
-	@Html.Partial("Partial/_UserRelationships", Model.UserRelationships)
+    <hr />
+    @Html.Partial("Partial/_UserRelationships", Model.UserRelationships)
 </div>
 <p>
 	@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
