--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_UserRelationships.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_UserRelationships.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SmartRoom.Web.App_Start.UserRelationship>
+﻿@model IEnumerable<SmartRoom.Web.UserRelationship>
 
 <p>
     @* @Html.ActionLink("Create New", "Create") *@
