--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Index.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SmartRoom.Web.App_Start.YoutubeLiveDetail>
+﻿@model IEnumerable<SmartRoom.Web.YoutubeLiveDetail>
 
 @{
     ViewBag.Title = "My Broadcasts";
