--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -1,7 +1,32 @@
-﻿body {
+﻿body,input,textarea,select
+	{
+		font-family: 'Open Sans', sans-serif;
+		line-height: 1.85em;
+		color: #888;
+		font-weight: 300;
+	}
+/*ELIZABETH's EDITS*/
+body 
+{
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #A6ACB4;
+    color: black;
 }
+
+a
+	{
+		padding-top: 20px;
+        padding-bottom: 20px;
+        color: black;
+		text-decoration: none;
+	}
+    a:hover
+		{
+			color: #2CB2D2 !important;
+            text-decoration: none;
+		}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
@@ -67,14 +92,30 @@ textarea {
 
     #sortable li {
         margin: 3px 3px 3px 0;
-        padding: 1px;
+        padding-bottom: 50px;
+        padding-top:50px;
         float: left;
         width: 20%;
         min-width:15%;
         height: 20%;
         min-height:15%;
-        font-size: 16px;
+        font-size: 20px;
         text-align: center;
         border-style: solid;
         border-width: 2px;
+        background-color: #222426;
+        border-color: #2CB2D2;
+        text-decoration: none;
     }
+    #sortable a
+	{
+		padding-top: 20px;
+        padding-bottom: 20px;
+        color: #A6ACB4;
+		text-decoration: none;
+	}
+    #sortable a:hover
+		{
+			color: #2CB2D2 !important;
+            text-decoration: none;
+		}
