--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -78,3 +78,15 @@ textarea {
         border-style: solid;
         border-width: 2px;
     }
+/* Youtube Styles */
+
+.datepicker {
+    
+    max-width: 210px;
+
+}
+
+.form-horizontal {
+
+
+}
