--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -80,13 +80,9 @@ textarea {
     }
 /* Youtube Styles */
 
-.datepicker {
+.datetimepicker {
     
     max-width: 210px;
 
 }
 
-.form-horizontal {
-
-
-}
