--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -20,7 +20,17 @@
 input,
 select,
 textarea {
-   
+
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;   
+
 }
 
 .index-course {
@@ -78,6 +88,8 @@ textarea {
         border-style: solid;
         border-width: 2px;
     }
+
+
 /* Youtube Styles */
 
 .datetimepicker {
