--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -26,14 +26,14 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CourseId, "CourseId", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CourseId, "CourseId", new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.DropDownList("CourseId", String.Empty)
                 @Html.ValidationMessageFor(model => model.CourseId)
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastTitle, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BroadcastTitle, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.BroadcastTitle)
                 @Html.ValidationMessageFor(model => model.BroadcastTitle)
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastDescription, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BroadcastDescription, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.BroadcastDescription)
                 @Html.ValidationMessageFor(model => model.BroadcastDescription)
@@ -49,9 +49,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BroadcastScheduledStartTime, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
-                <div class="input-group date  datetimepicker">
+                <div class="input-group date  datetimepicker" style="display:inline-table">
                     @Html.EditorFor(model => model.BroadcastScheduledStartTime, "DateTime", new { htmlAttributes = new { @id = "stardDate", @class = "form-control" } })
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
@@ -62,9 +62,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BroadcastScheduledEndTime, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
-                <div class="input-group date datetimepicker">
+                <div class="input-group date datetimepicker" style="display:inline-table">
                     @Html.EditorFor(model => model.BroadcastScheduledEndTime, "DateTime", new { htmlAttributes = new { @id = "endDate", @class = "form-control" } })
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.DropDownListFor(model => model.BroadcastStatus, new SelectList(
                   new List<Object>{
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.StreamSnippetTitle, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StreamSnippetTitle, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.StreamSnippetTitle)
                 @Html.ValidationMessageFor(model => model.StreamSnippetTitle)
@@ -97,7 +97,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StreamCDNFormat, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StreamCDNFormat, new { @class = "control-label col-md-4" })
             <div class="col-md-6">
                 @Html.DropDownListFor(model => model.StreamCDNFormat, new SelectList(
                   new List<Object>{
@@ -114,7 +114,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-6">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
