--- a/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
+++ b/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
     </div>
 
