--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
@@ -3,7 +3,7 @@
 @{
 	ViewBag.Title = "Details";
 }
-
+@Html.Partial("~/Areas/Classroom/Views/Header/_Header.cshtml")
 <h2>Details</h2>
 <div>
 	<h4>Course</h4>
