--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Create.cshtml
@@ -9,7 +9,6 @@
     @Styles.Render("~/Content/jquery-ui.css")
 }
 
-<h2>Create</h2>
 
 
 @using (Html.BeginForm())
@@ -17,7 +16,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Course</h4>
+        <h2>Create New Course</h2>
         <hr />
         @Html.ValidationSummary(true)
 
@@ -85,16 +84,14 @@
             </div>
         </div>
 
-
-
+        <br />
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-2">
+                <button onclick="location.href = '@Url.Action("Index", "", new { area = "" })'; return false;" class="btn btn-default">Go Back</button>
+            </div>
+            <div class="col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
