--- a/SmartRoom/SmartRoom/Views/Home/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 {
     @Scripts.Render("~/Scripts/Personalized/dragDrop.js")
 }
-@if (User.IsInRole("Admin"))
+@*@if (User.IsInRole("Admin"))
 {
     <ul>
         <li>@Html.ActionLink("Classroom Index", "Index", "Courses", new { Area = "Classroom" }, new { })</li>
@@ -16,7 +16,7 @@
         <li>@Html.ActionLink("YouTube Index", "Index", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("YouTube Create", "Create", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("Syllabus Create", "Create", "Syllabus", new { Area = "Forms" }, new { })</li>
-    </ul>}
+    </ul>}*@
 <ul id="sortable">
 
     @if (Model.Count() > 0)
@@ -24,15 +24,18 @@
         foreach (var item in Model)
         {
             <li class="ui-state-default class-container">
-                @Html.ActionLink(Html.DisplayFor(modelItem => item.Title).ToString(), "Details", "Courses", new { Area = "Classroom", id = item.Id }, null)
+                @Html.ActionLink(HttpUtility.HtmlDecode(Html.DisplayFor(modelItem => item.Title) + " - " + Html.DisplayFor(modelItem => item.Section)), "Details", "Courses", new { Area = "Classroom", id = item.Id }, null)
                 <hr />
             </li>
         }
     }
     @if (User.IsInRole("Teacher"))
     {
-        <li>
-            @Html.ActionLink("Add Classroom", "Create", "Courses", new { Area = "Classroom" }, new { })
+        <li class="class-container">
+            @Html.ActionLink("Add Classroom", "Create", "Courses", new { Area = "Classroom", id = "create-course" }, new { })
+            <hr />
+            <br>
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         </li>
     }
 </ul>
